5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4079/executions/1728_2497.log
== TEST (2019-05-10 12:11:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = ????

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
File "XXXX", line 17
    t = ????
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:12:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0.4

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:12:53) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while (teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0.4

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while (teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:13:12) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while int(teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0.4

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while int(teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-10 12:13:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0.4

print(round(saldo, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:59:06) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0.4

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:59:34) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(teste>1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste>1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 12:59:55) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(teste>=1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste>=1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:00:17) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(teste<1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste<1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:00:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(teste<=1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste<=1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:02:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0.4

# Atualizacao de saldo
while(teste <= 1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste <= 1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:02:24) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0.4

# Atualizacao de saldo
while(teste < 1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste < 1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 13:13:52) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0.4

# Atualizacao de saldo
while(teste < 1):
	rend = saldo * juros
	saldo = saldo + rend
	teste = 0

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste < 1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:18:07) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t < 1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste < 1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:19:15) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste < 1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:20:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > 0):
	rend = saldo * juros/100
	saldo = round(saldo,2) 
	t = t + 1

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 14, in <module>
    while(teste < 1):
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:21:08) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = round(saldo,2) 
	t = t + 1

print(round(teste, 2)) # Exibicao de resultados

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 19, in <module>
    print(round(teste, 2)) # Exibicao de resultados
NameError: name 'teste' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:21:28) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = round(saldo,2) 
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:21:39) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = round(saldo,2) 
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.575713
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
575.25
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
825.4
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1275.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:21:42) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = round(saldo,2) 
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
575.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:21:57) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = round(saldo,2) 
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.776362
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
575.25
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
825.4
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1275.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:22:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:22:37) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.620337
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:23:11) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:23:23) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.408636
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:24:31) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q= float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = q    # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:24:46) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q= float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = q    # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1

print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.645001
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1552.02
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 18:25:09) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q= float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = q    # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:25:25) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q= float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = q    # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.637767
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:37:02) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(t < 1):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0

print(round(teste, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
1116.13
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:39:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > 0):
	rend = saldo * juros
	saldo = saldo + rend
	t = 0

print(round(teste, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
1175.28
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 18:41:03) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

qi    = float(input("Quantia inicial: "))
tempo = float(input("Tempo de investimento: "))
juros = 4.0
saldo = qi      # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > 0):
	rend = saldo * juros/100
	saldo = round(saldo,2) 
	t = t + 1

print(round(teste, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
1215.04
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 19:02:16) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q= float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = q    # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- OUTPUT:
598.26
622.19
647.08
672.96
699.88
727.87
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 19:02:26) 
-- CODE:
# Instituto de Computacao - UFAM
# Lab 04 - Ex 04
# 20 / 06 / 2016

q= float(input("Quantia inicial: "))
tempo = int(input("Tempo de investimento: "))
juros = 4.0
saldo = q    # Variavel acumuladora

# Valor inicial da variavel contadora
t = 0

# Atualizacao de saldo
while(tempo > t):
	rend = saldo * juros/100
	saldo = saldo + rend
	t = t + 1

	print(round(saldo, 2)) # Exibicao de resultados

	

-- EXECUTION TIME:
0.192894
-- TEST CASE 1:
---- input:
575.25
6
---- correct output:
598.26
622.19
647.08
672.96
699.88
727.87
---- user output:
598.26
622.19
647.08
672.96
699.88
727.87
-- TEST CASE 2:
---- input:
825.4
3

---- correct output:
858.42
892.75
928.46
---- user output:
858.42
892.75
928.46
-- TEST CASE 3:
---- input:
1275.65
5
---- correct output:
1326.68
1379.74
1434.93
1492.33
1552.02
---- user output:
1326.68
1379.74
1434.93
1492.33
1552.02
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
